<resources>
    <string name="app_name">Kinda Advanced Listing App</string>
    <string name="image" />
    <string name="title">Title</string>
    <string name="movieimage">MovieImage</string>
    <string name="rating">Rating</string>
    <string name="genre">Genre</string>
    <string name="votes">Votes</string>
    <string name="director">Director</string>
    <string name="actors">Actors</string>
    <string name="release">Release</string>
    <string name="language">Language</string>
    <string name="run_time">Run Time</string>
    <string name="type">Type</string>
    <string name="plot">Plot</string>
    <string name="search_movie_title">Search Movie Title</string>
    <string name="search">Search</string>
    <string name="percen">/10.0</string>
    <string name="b_vote"><b>Votes: </b></string>
    <string name="b_director"><b>Director/s: </b></string>
    <string name="b_actors"><b>Actors:\n</b></string>
    <string name="b_date"><b>Date Released:\n</b></string>
    <string name="b_lang"><b>Language:\n</b></string>
    <string name="b_run"><b>Run Time: </b></string>
    <string name="b_type"><b>Type: </b></string>
    <string name="movie_not_found">Movie Not Found!!!</string>
    <string name="please_key_in_to_search_movie">Please key in to search Movie</string>
</resources>
