<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/cardView"
    android:layout_margin="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">
        <ImageView
            android:layout_height="100dp"
            android:layout_width="65dp"
            android:id="@+id/movie_img"
            android:layout_marginEnd="16dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/image" />

        <TextView
            android:id="@+id/movie_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/movie_img"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/title"
            android:textSize="20sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/movie_plot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_toEndOf="@id/movie_img"
            android:ellipsize="end"
            android:maxLines="3"
            android:minLines="2"
            android:text="@string/plot"
            android:textColor="@color/grey"
            android:textSize="13sp"
            android:textStyle="bold" />

    </RelativeLayout>



</androidx.cardview.widget.CardView>